# caire

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.backend.production  Dockerfile.frontend  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat  setup.sh
.github/workflows/: deploy.yml  lint.yml  test.yml
backend/: __init__.py  auth.py  compiler.py  database.py  main.py  models_db.py
backend/models/: __init__.py  decision_tree.py
backend/prompts/: guideline_parser_system.txt  refinement_system.txt  tree_structure.json
backend/prompts/emergency_triage/: few_shot_example.json  (+2 more)
backend/routes/: __init__.py  compile.py  guidelines.py  monitoring.py  test_results.py  trees.py
backend/services/: __init__.py  compiler_service.py  ingestion_service.py  llm_service.py  monitoring_service.py  test_service.py
backend/utils/: __init__.py  logging.py
docs/: developer-guide.md  lessons-learned.md  phi-hipaa.md  user-guide.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
guidelines/: .gitkeep  emergency-triage-simplified.md  sample.md
models/: emergency-triage-demo-report.txt  emergency-triage-v1.json  sample_triage_v1.json
scripts/: backup_db.sh  demo.py  export_trees.sh  ingest_example.py  seed_sample_tree.py
shared/: __init__.py
shared/schemas/: __init__.py  decision_tree.py  decision_tree_schema.json
tests/: __init__.py  conftest.py  test_api_trees.py  test_compiler.py
tests/fixtures/: emergency_triage_cases.json
(+31 files in other folders)
